fix: layout css gap incompatibility

--- a/components/ArtistsChart/artistsChart.module.scss
+++ b/components/ArtistsChart/artistsChart.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/breakpoints";
 
 .container {
-  width: 50%;
+  width: 49%;
 
   @media only screen and (max-width: $lg) {
     width: 100%;
