--- a/components/Discover/discover.module.scss
+++ b/components/Discover/discover.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/components";
 
 .container {
-  width: 50%;
+  width: 49%;
 
   @media only screen and (max-width: $lg) {
     width: 100%;
