--- a/components/Playlists/playlists.module.scss
+++ b/components/Playlists/playlists.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/breakpoints";
 
 .container {
-  width: 50%;
+  width: 49%;
   margin-bottom: var(--spacer-l);
 
   @media only screen and (max-width: $lg) {
