--- a/components/TopItems/topItems.module.scss
+++ b/components/TopItems/topItems.module.scss
@@ -2,7 +2,7 @@
 
 .topItems {
   display: flex;
-  width: 50%;
+  width: 49%;
   margin-bottom: var(--spacer-m);
 
   @media only screen and (max-width: $lg) {
